fix bad scrollbar

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -61,31 +61,36 @@ a:hover {
   min-height: calc(100vh - 40px);
   display: flex;
   flex-direction: column;
-  max-height: calc(100vh - 40px);
-  overflow-y: scroll;
 }
+
 
 /*
- *  CUSTOM SCROLLBAR
+ *  CUSTOM SCROLLBAR for Large Screens Only
  */
 
-#container::-webkit-scrollbar-track {
-  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
-  border-radius: 10px;
-  background-color: var(--background);
-}
+@media (min-width: 800px) {
+  #container {
+    max-height: calc(100vh - 40px);
+    overflow-y: scroll;
+  }
 
-#container::-webkit-scrollbar {
-  width: 6px;
-  background-color: var(--background);
-}
+  #container::-webkit-scrollbar-track {
+    -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+    border-radius: 10px;
+    background-color: var(--background);
+  }
 
-#container::-webkit-scrollbar-thumb {
-  border-radius: 10px;
-  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, .3);
-  background-color: var(--linkColor);
-}
+  #container::-webkit-scrollbar {
+    width: 6px;
+    background-color: var(--background);
+  }
 
+  #container::-webkit-scrollbar-thumb {
+    border-radius: 10px;
+    -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, .3);
+    background-color: var(--linkColor);
+  }
+}
 
 header {}
 
